--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
         "files": [
             "registration.php"
         ]
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
