--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
             "registration.php"
         ]
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "master",
     "prefer-stable": true
 }
