--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "magento/theme-frontend-blank": ">=100.0.0"
     },
     "type": "magento2-theme",
+    "version": "1.1.0",
     "license": [
         "OSL-3.0"
     ],
@@ -13,7 +14,5 @@
         "files": [
             "registration.php"
         ]
-    },
-    "minimum-stability": "master",
-    "prefer-stable": true
+    }
 }
